Rails, Vines, Ladders, bugfixes, minor improvements

--- a/Craftcppdemo.vcxproj
+++ b/Craftcppdemo.vcxproj
@@ -179,6 +179,7 @@
     <ClInclude Include="ChunkExtracted.h" />
     <ClInclude Include="ConnectionManager.h" />
     <ClInclude Include="CrosshairRenderer.h" />
+    <ClInclude Include="DefaultTextureHandler.h" />
     <ClInclude Include="Fbo.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="Frustum.h" />
@@ -190,10 +191,15 @@
     <ClInclude Include="GuiRespawn.h" />
     <ClInclude Include="GuiSettings.h" />
     <ClInclude Include="ImageRenderer.h" />
+    <ClInclude Include="LaddersVertexHandler.h" />
     <ClInclude Include="lodepng.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="PostProcessing.h" />
+    <ClInclude Include="PoweredRailsTextureHandler.h" />
+    <ClInclude Include="PoweredRailsVertexHandler.h" />
+    <ClInclude Include="RailsTextureHandler.h" />
+    <ClInclude Include="RailsVertexHandler.h" />
     <ClInclude Include="Raycast.h" />
     <ClInclude Include="RaycastResult.h" />
     <ClInclude Include="Settings.h" />
@@ -201,12 +207,16 @@
     <ClInclude Include="ShadowFrameBuffer.h" />
     <ClInclude Include="ShadowMapRenderer.h" />
     <ClInclude Include="Skybox.h" />
+    <ClInclude Include="StatefulTextureHandler.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="TextureHandler.h" />
     <ClInclude Include="TextureIds.h" />
     <ClInclude Include="Textures.h" />
     <ClInclude Include="Title.h" />
     <ClInclude Include="Vbo.h" />
     <ClInclude Include="VboBuilder.h" />
+    <ClInclude Include="VertexHandler.h" />
+    <ClInclude Include="VinesVertexHandler.h" />
     <ClInclude Include="World.h" />
     <ClInclude Include="Section.h" />
     <ClInclude Include="Controls.h" />
@@ -261,6 +271,7 @@
     <ClCompile Include="ShadowFrameBuffer.cpp" />
     <ClCompile Include="ShadowMapRenderer.cpp" />
     <ClCompile Include="Skybox.cpp" />
+    <ClCompile Include="TextureHandler.cpp" />
     <ClCompile Include="TextureIds.cpp" />
     <ClCompile Include="Vbo.cpp" />
     <ClCompile Include="VboBuilder.cpp" />
