--- a/Craftcppdemo.vcxproj
+++ b/Craftcppdemo.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="C01PacketChat.h" />
     <ClInclude Include="C06PlayerPosLook.h" />
     <ClInclude Include="C07PlayerDigging.h" />
+    <ClInclude Include="C08PlayerBlockPlacement.h" />
     <ClInclude Include="C16Respawn.h" />
     <ClInclude Include="CactusVertexHandler.h" />
     <ClInclude Include="ChatMessage.h" />
@@ -252,6 +253,7 @@
     <ClCompile Include="C01PacketChat.cpp" />
     <ClCompile Include="C06PlayerPosLook.cpp" />
     <ClCompile Include="C07PlayerDigging.cpp" />
+    <ClCompile Include="C08PlayerBlockPlacement.cpp" />
     <ClCompile Include="C16Respawn.cpp" />
     <ClCompile Include="ChatParser.cpp" />
     <ClCompile Include="Chunk.cpp" />
